--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     </section>
 
     <section id="iphones">
-        <div class="iphone-row">
+        <div class="card">
             <div class="card">
-                <img src="https://m.media-amazon.com/images/I/61j6OFvZ-SL._AC_SL1000_.jpg" alt="iphone">
+                <img src="https://m.media-amazon.com/images/I/61j6OFvZ-SL._AC_SL1000_.jpg" alt="iphones">
                 <div>
                     <h1>RTX 3060</h1>
                     <h2>12GB de VRAM</h2>
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="https://m.media-amazon.com/images/I/61I3eKMy3fL._AC_SL1000_.jpg" alt="iphone">
+                <img src="https://m.media-amazon.com/images/I/61I3eKMy3fL._AC_SL1000_.jpg" alt="iphones">
                 <div>
                     <h1>RTX 4060S</h1>
                     <h2>16GB de VRAM</h2>
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="https://ae01.alicdn.com/kf/S51760f0a27834f979f32d61a6dba36f6Q.jpg_80x80.jpg_.webp" alt="iphone">
+                <img src="https://ae01.alicdn.com/kf/S51760f0a27834f979f32d61a6dba36f6Q.jpg_80x80.jpg_.webp" alt="iphones">
                 <div>
                     <h1>RTX 3070</h1>
                     <h2>8GB de VRAM</h2>
@@ -72,7 +72,7 @@
 
         <div class="iphone-row">
             <div class="card">
-                <img src="https://http2.mlstatic.com/D_NQ_NP_665584-MLU75440435518_042024-O.webp" alt="iphone">
+                <img src="https://http2.mlstatic.com/D_NQ_NP_665584-MLU75440435518_042024-O.webp" alt="iphones">
                 <div>
                     <h1>RTX 3060</h1>
                     <h2>6GB de VRAM</h2>
