--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcRR0pPNjbJurFE_YVxRLkVIb0c19x7jP6tgsiDCnkzwBudP1toinku6yWvr_CW8OapmqFY6L4g5vJHSfQRR_SQAssdMa0fb2pWjsiku9QuoEE1Bx22CKcV8T6vzy9Nwrmr1UR6CZW_uPB0&usqp=CAc" alt="iphone">
+                <img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcRR0pPNjbJurFE_YVxRLkVIb0c19x7jP6tgsiDCnkzwBudP1toinku6yWvr_CW8OapmqFY6L4g5vJHSfQRR_SQAssdMa0fb2pWjsiku9QuoEE1Bx22CKcV8T6vzy9Nwrmr1UR6CZW_uPB0&usqp=CAc" alt="iphones">
                 <div>
                     <h1>RTX 3050</h1>
                     <h2>6GB de VRAM</h2>
@@ -90,7 +90,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcRv6it_6P7UyDSxPr4PZJjsnKNMpBCSlfLq1ZlRQo2bsIINUmUhtf8n_dtoBuuJWUnA-m8N1Ba3qMT7q6unttOxNlAuUc8cRxqX-N0FLsl5NGxDTTwUv-sxREI_r7F6mX5CSchdfQ&usqp=CAc" alt="iphone">
+                <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcRv6it_6P7UyDSxPr4PZJjsnKNMpBCSlfLq1ZlRQo2bsIINUmUhtf8n_dtoBuuJWUnA-m8N1Ba3qMT7q6unttOxNlAuUc8cRxqX-N0FLsl5NGxDTTwUv-sxREI_r7F6mX5CSchdfQ&usqp=CAc" alt="iphones">
                 <div>
                     <h1>RTX 3090TI</h1>
                     <h2>24GB de VRAM</h2>
@@ -102,7 +102,7 @@
 
         <div class="iphone-row">
             <div class="card">
-                <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcS8qa_BAfkZkPniSDhFJILwlQdPXvTlul0VBaQruTAfQj9r-Jk5ahpzphBBM93GjgX-OP08k0UU_goj129GuU2hNnYXq4J5JLLwGKhwTh2yznXr7mSxacujxJDTgGR_VIBWXwzTpgQ&usqp=CAc" alt="iphone">
+                <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcS8qa_BAfkZkPniSDhFJILwlQdPXvTlul0VBaQruTAfQj9r-Jk5ahpzphBBM93GjgX-OP08k0UU_goj129GuU2hNnYXq4J5JLLwGKhwTh2yznXr7mSxacujxJDTgGR_VIBWXwzTpgQ&usqp=CAc" alt="iphones">
                 <div>
                     <h1>RTX 4090</h1>
                     <h2>24GB de VRAM</h2>
@@ -111,7 +111,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcRKiMAFC-fZYW4C6MBqtIGYAcjMyLtPUqt2GCdmi498xR1YkN9cSXKrF1PFB2YR0cVEEXWUl_AVxbOU2URBvCvQkPLJOVW1YBHP9X8H3eaL6dyOCGFvtlA1C_IB9XM_xooWdwH39GrkeQ&usqp=CAc" alt="iphone">
+                <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcRKiMAFC-fZYW4C6MBqtIGYAcjMyLtPUqt2GCdmi498xR1YkN9cSXKrF1PFB2YR0cVEEXWUl_AVxbOU2URBvCvQkPLJOVW1YBHP9X8H3eaL6dyOCGFvtlA1C_IB9XM_xooWdwH39GrkeQ&usqp=CAc" alt="iphones">
                 <div>
                     <h1>RTX 2060</h1>
                     <h2>6GB de VRAM</h2>
@@ -120,7 +120,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcRqtzPC-jqsLbgC-k1jwTk_8hPaFS4qYetYdKBHsgFu1-L1OBocTDItKCrNWaaVUoBdgmIB3Sudw5GusW2q7MrUItZl0zdwSif_qGOABrPqRqJVE0wgxQiUqE_26Ef_WcP1jdO9gdVd0Jw&usqp=CAc" alt="iphone">
+                <img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcRqtzPC-jqsLbgC-k1jwTk_8hPaFS4qYetYdKBHsgFu1-L1OBocTDItKCrNWaaVUoBdgmIB3Sudw5GusW2q7MrUItZl0zdwSif_qGOABrPqRqJVE0wgxQiUqE_26Ef_WcP1jdO9gdVd0Jw&usqp=CAc" alt="iphones">
                 <div>
                     <h1>RTX 3080</h1>
                     <h2>12GB de VRAM</h2>
