--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <button>Comprar</button>
                 </div>
             </div>
-            <div class="card" style="padding: 0%;">
+            <div class="card" style=padding: 0%;>
                 <img src="https://m.media-amazon.com/images/I/61I3eKMy3fL._AC_SL1000_.jpg" alt="iphones">
                 <div>
                     <h1>RTX 4060S</h1>
