--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
     <section id="iphones">
         <div class="card">
+            <div class="card">
                 <img src="https://m.media-amazon.com/images/I/61j6OFvZ-SL._AC_SL1000_.jpg" alt="iphones">
                 <div>
                     <h1>RTX 3060</h1>
