--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </section>
 
     <section id="iphones">
-        <div class="card">
+        <div class="iphone-row">
             <div class="card">
                 <img src="https://m.media-amazon.com/images/I/61j6OFvZ-SL._AC_SL1000_.jpg" alt="iphones">
                 <div>
