--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcRqtzPC-jqsLbgC-k1jwTk_8hPaFS4qYetYdKBHsgFu1-L1OBocTDItKCrNWaaVUoBdgmIB3Sudw5GusW2q7MrUItZl0zdwSif_qGOABrPqRqJVE0wgxQiUqE_26Ef_WcP1jdO9gdVd0Jw&usqp=CAc" alt="iphones">
+                <img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcQJFy8IaMqpZ2y0EmWTgY8BmgCOewYsMv1_TP1NyZK0SA-dZqx092oUMofGq-EpY25q6ZaqYzSHtasui-djtI_K7-tEPU8tyCC8re2d43RJBVZkX6g7SFB5vw&usqp=CAE" alt="iphones">
                 <div>
                     <h1>RTX 3080</h1>
                     <h2>12GB de VRAM</h2>
