--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="https://ae01.alicdn.com/kf/S51760f0a27834f979f32d61a6dba36f6Q.jpg_80x80.jpg_.webp" alt="iphones">
+                <img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcQAny0pWYZbDxrTHdDsyJ2q33Cwley3ivktI03qc1w3saecLUL9pBKy2dw-JzhzExHBQGgx2TSWtqwYaYOno6PXlHAduoiNWaG3xU5IF80e_F4skV0FZuC0&usqp=CAE" alt="iphones">
                 <div>
                     <h1>RTX 3070</h1>
                     <h2>8GB de VRAM</h2>
